src/bindgen.rs

extern "C" {
    pub fn rasqal_query_results_formatter_write(
        iostr: *mut raptor_iostream,
        formatter: *mut rasqal_query_results_formatter,
        results: *mut rasqal_query_results,
        base_uri: *mut raptor_uri,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_results_formatter_read(
        world: *mut rasqal_world,
        iostr: *mut raptor_iostream,
        formatter: *mut rasqal_query_results_formatter,
        results: *mut rasqal_query_results,
        base_uri: *mut raptor_uri,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_iostream_write_escaped_counted_string(
        query: *mut rasqal_query,
        iostr: *mut raptor_iostream,
        string: *const libc::c_uchar,
        len: usize,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_query_escape_counted_string(
        query: *mut rasqal_query,
        string: *const libc::c_uchar,
        len: usize,
        output_len_p: *mut usize,
    ) -> *mut libc::c_uchar;
}
extern "C" {
    pub fn rasqal_new_data_graph_from_uri(
        world: *mut rasqal_world,
        uri: *mut raptor_uri,
        name_uri: *mut raptor_uri,
        flags: libc::c_uint,
        format_type: *const libc::c_char,
        format_name: *const libc::c_char,
        format_uri: *mut raptor_uri,
    ) -> *mut rasqal_data_graph;
}
extern "C" {
    pub fn rasqal_new_data_graph_from_iostream(
        world: *mut rasqal_world,
        iostr: *mut raptor_iostream,
        base_uri: *mut raptor_uri,
        name_uri: *mut raptor_uri,
        flags: libc::c_uint,
        format_type: *const libc::c_char,
        format_name: *const libc::c_char,
        format_uri: *mut raptor_uri,
    ) -> *mut rasqal_data_graph;
}
extern "C" {
    pub fn rasqal_new_data_graph_from_data_graph(
        dg: *mut rasqal_data_graph,
    ) -> *mut rasqal_data_graph;
}
extern "C" {
    pub fn rasqal_free_data_graph(dg: *mut rasqal_data_graph);
}
extern "C" {
    pub fn rasqal_data_graph_print(dg: *mut rasqal_data_graph, fh: *mut FILE) -> libc::c_int;
}
pub const rasqal_compare_flags_RASQAL_COMPARE_NOCASE: rasqal_compare_flags = 1;
pub const rasqal_compare_flags_RASQAL_COMPARE_XQUERY: rasqal_compare_flags = 2;
pub const rasqal_compare_flags_RASQAL_COMPARE_RDF: rasqal_compare_flags = 4;
pub const rasqal_compare_flags_RASQAL_COMPARE_URI: rasqal_compare_flags = 8;
pub const rasqal_compare_flags_RASQAL_COMPARE_SAMETERM: rasqal_compare_flags = 16;
/// rasqal_compare_flags:
/// @RASQAL_COMPARE_NOCASE: String comparisons are case independent.
/// @RASQAL_COMPARE_XQUERY: XQuery comparsion rules apply.
/// @RASQAL_COMPARE_RDF:    RDF Term comparsion rules apply.
/// @RASQAL_COMPARE_URI:    Allow comparison of URIs and allow strings to have a boolean value (unused; was for RDQL)
/// @RASQAL_COMPARE_SAMETERM: SPARQL sameTerm() builtin rules apply.
///
/// Flags for rasqal_expression_evaluate(), rasqal_literal_compare() or
/// rasqal_literal_as_string_flags()
pub type rasqal_compare_flags = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rasqal_random_s {
    _unused: [u8; 0],
}
/// rasqal_random:
///
/// Internal
pub type rasqal_random = rasqal_random_s;
/// rasqal_evaluation_context:
/// @world: rasqal world
/// @base_uri: base URI of expression context (or NULL)
/// @locator: locator or NULL
/// @flags: expression comparison flags
/// @seed: random seeed
/// @random: random number generator object
///
/// A context for evaluating an expression such as with
/// rasqal_expression_evaluate2()
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rasqal_evaluation_context {
    pub world: *mut rasqal_world,
    pub base_uri: *mut raptor_uri,
    pub locator: *mut raptor_locator,
    pub flags: libc::c_int,
    pub seed: libc::c_uint,
    pub random: *mut rasqal_random,
}
#[test]
fn bindgen_test_layout_rasqal_evaluation_context() {
    assert_eq!(
        ::std::mem::size_of::<rasqal_evaluation_context>(),
        40usize,
        concat!("Size of: ", stringify!(rasqal_evaluation_context))
    );
    assert_eq!(
        ::std::mem::align_of::<rasqal_evaluation_context>(),
        8usize,
        concat!("Alignment of ", stringify!(rasqal_evaluation_context))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<rasqal_evaluation_context>())).world as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_evaluation_context),
            "::",
            stringify!(world)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<rasqal_evaluation_context>())).base_uri as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_evaluation_context),
            "::",
            stringify!(base_uri)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<rasqal_evaluation_context>())).locator as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_evaluation_context),
            "::",
            stringify!(locator)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<rasqal_evaluation_context>())).flags as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_evaluation_context),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<rasqal_evaluation_context>())).seed as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_evaluation_context),
            "::",
            stringify!(seed)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<rasqal_evaluation_context>())).random as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_evaluation_context),
            "::",
            stringify!(random)
        )
    );
}
extern "C" {
    pub fn rasqal_new_0op_expression(
        world: *mut rasqal_world,
        op: rasqal_op,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_new_1op_expression(
        world: *mut rasqal_world,
        op: rasqal_op,
        arg: *mut rasqal_expression,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_new_2op_expression(
        world: *mut rasqal_world,
        op: rasqal_op,
        arg1: *mut rasqal_expression,
        arg2: *mut rasqal_expression,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_new_3op_expression(
        world: *mut rasqal_world,
        op: rasqal_op,
        arg1: *mut rasqal_expression,
        arg2: *mut rasqal_expression,
        arg3: *mut rasqal_expression,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_new_4op_expression(
        world: *mut rasqal_world,
        op: rasqal_op,
        arg1: *mut rasqal_expression,
        arg2: *mut rasqal_expression,
        arg3: *mut rasqal_expression,
        arg4: *mut rasqal_expression,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_new_string_op_expression(
        world: *mut rasqal_world,
        op: rasqal_op,
        arg1: *mut rasqal_expression,
        literal: *mut rasqal_literal,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_new_literal_expression(
        world: *mut rasqal_world,
        literal: *mut rasqal_literal,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_new_function_expression(
        world: *mut rasqal_world,
        name: *mut raptor_uri,
        args: *mut raptor_sequence,
        params: *mut raptor_sequence,
        flags: libc::c_uint,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_new_aggregate_function_expression(
        world: *mut rasqal_world,
        op: rasqal_op,
        arg1: *mut rasqal_expression,
        params: *mut raptor_sequence,
        flags: libc::c_uint,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_new_cast_expression(
        world: *mut rasqal_world,
        name: *mut raptor_uri,
        value: *mut rasqal_expression,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_new_expr_seq_expression(
        world: *mut rasqal_world,
        op: rasqal_op,
        args: *mut raptor_sequence,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_new_set_expression(
        world: *mut rasqal_world,
        op: rasqal_op,
        arg1: *mut rasqal_expression,
        args: *mut raptor_sequence,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_new_group_concat_expression(
        world: *mut rasqal_world,
        flags: libc::c_uint,
        args: *mut raptor_sequence,
        separator: *mut rasqal_literal,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_new_expression_from_expression(
        e: *mut rasqal_expression,
    ) -> *mut rasqal_expression;
}
extern "C" {
    pub fn rasqal_free_expression(e: *mut rasqal_expression);
}
extern "C" {
    pub fn rasqal_expression_print_op(e: *mut rasqal_expression, fh: *mut FILE);
}
extern "C" {
    pub fn rasqal_expression_print(e: *mut rasqal_expression, fh: *mut FILE) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_expression_evaluate(
        world: *mut rasqal_world,
        locator: *mut raptor_locator,
        e: *mut rasqal_expression,
        flags: libc::c_int,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_expression_evaluate2(
        e: *mut rasqal_expression,
        eval_context: *mut rasqal_evaluation_context,
        error_p: *mut libc::c_int,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_expression_op_label(op: rasqal_op) -> *const libc::c_char;
}
extern "C" {
    pub fn rasqal_expression_compare(
        e1: *mut rasqal_expression,
        e2: *mut rasqal_expression,
        flags: libc::c_int,
        error_p: *mut libc::c_int,
    ) -> libc::c_int;
}
/// rasqal_expression_visit_fn:
/// @user_data: user data passed in with rasqal_expression_visit()
/// @e: current expression
///
/// User function to visit an expression and operate on it with
/// rasqal_expression_visit()
///
/// Return value: non-0 to truncate the visit
pub type rasqal_expression_visit_fn = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut libc::c_void, e: *mut rasqal_expression) -> libc::c_int,
>;
extern "C" {
    pub fn rasqal_expression_visit(
        e: *mut rasqal_expression,
        fn_: rasqal_expression_visit_fn,
        user_data: *mut libc::c_void,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_new_evaluation_context(
        world: *mut rasqal_world,
        locator: *mut raptor_locator,
        flags: libc::c_int,
    ) -> *mut rasqal_evaluation_context;
}
extern "C" {
    pub fn rasqal_free_evaluation_context(eval_context: *mut rasqal_evaluation_context);
}
extern "C" {
    pub fn rasqal_evaluation_context_set_base_uri(
        eval_context: *mut rasqal_evaluation_context,
        base_uri: *mut raptor_uri,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_evaluation_context_set_rand_seed(
        eval_context: *mut rasqal_evaluation_context,
        seed: libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_new_integer_literal(
        world: *mut rasqal_world,
        type_: rasqal_literal_type,
        integer: libc::c_int,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_numeric_literal_from_long(
        world: *mut rasqal_world,
        type_: rasqal_literal_type,
        value: libc::c_long,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_typed_literal(
        world: *mut rasqal_world,
        type_: rasqal_literal_type,
        string: *const libc::c_uchar,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_double_literal(world: *mut rasqal_world, d: f64) -> *mut rasqal_literal;
}
